# LoRa-Project

./: .gitignore  BinaryList.c  CRC.cpp  README.md  client.cpp  decode.cpp  encode.cpp  getMask.c  packet merging.docx  packet merging_backup.docx  tempCodeRunnerFile.c  ~$cket merging.docx
Adaptive_error_control/: json_up.txt  packet merging.docx  packet merging_backup.docx
Adaptive_error_control/Algorithm/: main.cpp
Adaptive_error_control/Component_1_decoding_and_crc_and_encoding/: CMakeLists.txt  main.cpp  tempCodeRunnerFile.cpp
Adaptive_error_control/Component_1_getCandidate/: CMakeLists.txt  backup.cpp  main.cpp
Adaptive_error_control/Component_1_getCandidate/Componet_1_getCandidate/inc/: header_1_2.h
Adaptive_error_control/Component_1_getCandidate/Componet_1_getCandidate/src/: header_1_2.cpp
Adaptive_error_control/Component_1_getCandidate/arduino-lmic/inc/: hal.h
Adaptive_error_control/Component_1_getCandidate/inc/: backup.h  header_1_2.h
Adaptive_error_control/Component_2_server_side/: CMakeLists.txt  block.cpp  epoll.cpp  main.cpp  select.cpp
Adaptive_error_control/Component_2_server_side/Component_1_fakesend/inc/: header_1_1.h
Adaptive_error_control/Component_2_server_side/Component_1_fakesend/src/: header_1_1.cpp
Adaptive_error_control/Component_2_server_side/Component_1_getCandidate/inc/: header_1_2.h
Adaptive_error_control/Component_2_server_side/Component_1_getCandidate/src/: header_1_2.cpp
Adaptive_error_control/Component_2_server_side/Component_1_getMask/inc/: header_1_3.h
Adaptive_error_control/Component_2_server_side/Component_1_getMask/src/: header_1_3_1.cpp  header_1_3_2.cpp  header_1_3_3.cpp
Adaptive_error_control/Component_2_server_side/Component_1_socketexample/inc/: header_1_5.h  header_1_6.h  header_1_7.h
Adaptive_error_control/Component_2_server_side/Component_1_socketexample/src/: header_1_5.cpp
Adaptive_error_control/Component_2_server_side/Component_2_server_side/inc/: header_2.h  header_2_1.h
Adaptive_error_control/Component_2_server_side/Component_2_server_side/src/: header_2.cpp  header_2_1.cpp
Adaptive_error_control/Component_2_server_side/inc/: header_2.h
Adaptive_error_control/Component_2_server_side/tools/inc/: parson.h  payload_crc.h  payload_diff.h
Adaptive_error_control/Component_2_server_side/tools/src/: payload_crc.cpp
Adaptive_error_control/Component_3_connection_error_correction/: APC.cpp  CMakeLists.txt  PC.cpp  main.cpp
Adaptive_error_control/Component_3_connection_error_correction/Component_1_fakesend/inc/: header_1_1.h
Adaptive_error_control/Component_3_connection_error_correction/Component_1_fakesend/src/: header_1_1.cpp
Adaptive_error_control/Component_3_connection_error_correction/Component_1_getCandidate/inc/: header_1_2.h
Adaptive_error_control/Component_3_connection_error_correction/Component_1_getCandidate/src/: header_1_2.cpp
Adaptive_error_control/Component_3_connection_error_correction/Component_1_getMask/inc/: header_1_3.h
Adaptive_error_control/Component_3_connection_error_correction/Component_1_getMask/src/: header_1_3_1.cpp  header_1_3_2.cpp  header_1_3_3.cpp
Adaptive_error_control/Component_3_connection_error_correction/Component_2_error_correction/inc/: header_2_2.h
Adaptive_error_control/Component_3_connection_error_correction/Component_2_error_correction/src/: header_2_2.cpp
Adaptive_error_control/Component_3_connection_error_correction/Component_2_server_side/inc/: header_2.h  header_2_1.h
Adaptive_error_control/Component_3_connection_error_correction/Component_2_server_side/src/: header_2.cpp  header_2_1.cpp
Adaptive_error_control/Component_3_connection_error_correction/Component_3_connectton_error_correction/inc/: header_3.h
Adaptive_error_control/Component_3_connection_error_correction/Component_3_connectton_error_correction/src/: header_3.cpp
Adaptive_error_control/Component_3_connection_error_correction/arduino-lmic/inc/: lmic.h
Adaptive_error_control/Component_3_connection_error_correction/arduino-lmic/src/: lmic.cpp
Adaptive_error_control/Component_3_connection_error_correction/tools/inc/: cJSON.h  payload_diff.h
Adaptive_error_control/Component_3_connection_error_correction/tools/src/: base64.cpp  cJSON.cpp  payload_diff.cpp
Adaptive_error_control/Matplotlib/: main.py
Adaptive_error_control/Solution_block/: CMakeLists.txt  main.cpp
Adaptive_error_control/Solution_block/Component_1_fakesend/inc/: header_1_1.h
Adaptive_error_control/Solution_block/Component_1_fakesend/src/: header_1_1.cpp
Adaptive_error_control/Solution_block/Component_1_getCandidate/src/: header_1_2.cpp
Adaptive_error_control/Solution_block/Component_3_connection_error_correction/src/: header_3.cpp
CRC/: 源.cpp
CSocketExample/: client.cpp  lora_pkt_fwd.c  server.cpp
ChirpstackMAC/: go.mod  main.go
Encoding/: 源.cpp
ErrorCorrection/: backup2.cpp  backup3.cpp  backup4.cpp  源.cpp
Error_Control/: duplicate reception.txt  report.md
Error_Control/server/Component_1_fakesend/: CMakeLists.txt  main.cpp
Error_Control/server/Component_1_getCandidate/: CMakeLists.txt
Error_Control/server/Component_1_getCandidate/Componet_1_getCandidate/inc/: header_1_2.h
Error_Control/server/Component_1_getCandidate/arduino-lmic/inc/: lmic.h  lmic_config_preconditions.h
Error_Control/server/Component_1_getCandidate/arduino-lmic/src/: lmic.cpp
Error_correction/Solution_epoll/: CMakeLists.txt  main.cpp
Error_correction/Solution_epoll/Component_1_fakesend/inc/: header_1_1.h
Error_correction/Solution_epoll/Component_1_getCandidate/inc/: header_1_2.h
Error_correction/Solution_epoll/Component_1_socketexample/src/: header_1_5.cpp
Error_correction/Solution_epoll/inc/: base64.h  header_3.h
Error_correction/Solution_epoll/src/: header_1_3.cpp  header_2_2.cpp  header_3.cpp
Error_correction/Solution_epoll/tools/inc/: payload_crc.h
Error_correction/Solution_epoll/tools/src/: payload_diff.cpp
GetMast/: backup1.cpp  backup2.cpp  源.cpp
MqttClient/: go.mod  main.go  main1.go
Send/: 源.cpp
Solution/: backup.cpp  header.h  源.cpp
decoding/: 源.cpp
slice/: main.go
(+2000 files in other folders)
